--- a/catalog/view/theme/d_visualize/stylesheet/skin/jag/_config.sass
+++ b/catalog/view/theme/d_visualize/stylesheet/skin/jag/_config.sass
@@ -5,7 +5,7 @@
  */
 $colorInfo: $p_old_gold
 $colorSuccess: $p_aqua_forest
-$colorDanger: $p_contessa
+$colorDanger: $p_red
 
 // primary
 $p_picton-blue: #4fb5e7
