--- a/catalog/view/theme/d_visualize/stylesheet/skin/jag/base/_typography.sass
+++ b/catalog/view/theme/d_visualize/stylesheet/skin/jag/base/_typography.sass
@@ -85,6 +85,8 @@ span
 a
   &:hover
     text-decoration: none !important
+p
+  margin-bottom: rem(15)
 //
 //.vd .post-thumb-heading a,
 //.post-thumb-heading a,
