--- a/catalog/view/theme/d_visualize/stylesheet/skin/jag/component/default/_button.sass
+++ b/catalog/view/theme/d_visualize/stylesheet/skin/jag/component/default/_button.sass
@@ -94,6 +94,10 @@
       background: $colorInfoButtonHover
     &:focus, &:active, &:active:hover, &:active:focus
       background: $colorInfoButtonActive
+  &-shrink
+    padding: 0 rem(55)
+    display: flex
+    align-items: center
 
 .buttons
   .btn-default
