--- a/catalog/view/theme/d_visualize/stylesheet/skin/jag/component/default/form/_field.sass
+++ b/catalog/view/theme/d_visualize/stylesheet/skin/jag/component/default/form/_field.sass
@@ -41,9 +41,12 @@ select.field
 .checkbox-container
   input
     opacity: 0
-
   label
     cursor: pointer
 
+//pavel make this
 .custom-input
   display: inline-block
+
+label.field-label
+  margin-bottom: rem(10)
