--- a/catalog/view/theme/d_visualize/template/account/newsletter.twig
+++ b/catalog/view/theme/d_visualize/template/account/newsletter.twig
@@ -24,6 +24,7 @@
                 </div>
             </div>
         </fieldset>
-        {% include 'd_visualize/template/partial/d_button_submit.twig' %}
+
+        {% include partial.d_button_submit.template with partial.d_button_submit %}
     </form>
 {% endblock %}
