--- a/catalog/view/theme/d_visualize/template/account/recurring_list.twig
+++ b/catalog/view/theme/d_visualize/template/account/recurring_list.twig
@@ -31,5 +31,5 @@
       {% else %}
       <p>{{text_empty}}</p>
       {% endif %}
-      {% include 'd_visualize/template/partial/d_button_continue.twig' %}
+    {% include partial.d_button_continue.template with  partial.d_button_continue %}
 {% endblock %}
