--- a/catalog/view/theme/d_visualize/template/account/return_form.twig
+++ b/catalog/view/theme/d_visualize/template/account/return_form.twig
@@ -131,7 +131,7 @@
           </div>
         </div>
         {% else %}
-        {% include 'd_visualize/template/partial/d_button_submit.twig' %}
+            {% include partial.d_button_submit.template with  partial.d_button_submit %}
         {% endif %}
       </form>
 
