--- a/catalog/view/theme/d_visualize/template/account/reward.twig
+++ b/catalog/view/theme/d_visualize/template/account/reward.twig
@@ -39,5 +39,5 @@
         <div class="col-sm-6 text-left">{{pagination}}</div>
         <div class="col-sm-6 text-right">{{results}}</div>
       </div>
-      {% include 'd_visualize/template/partial/d_button_continue.twig' %}
+    {% include partial.d_button_continue.template with  partial.d_button_continue %}
 {% endblock %}
