--- a/catalog/view/theme/d_visualize/template/component/d_account_field/jag.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_account_field/jag.twig
@@ -1,4 +1,4 @@
-<!-- > d_account_field -->
+<!-- > d_account_field_jag -->
 {% if customer_groups %}
     <div class="form-group required" style="display: {% if customer_groups|length > 1 %}block{% else %}none{% endif %};">
         <label class="{% if form %}col-sm-2{% endif %} field-label label-right-md"><span>{{entry_customer_group}}</span></label>
@@ -40,4 +40,4 @@
         </div>
     </div>
 {% endif %}
-<!-- /> d_account_field -->
+<!-- /> d_account_field_jag -->
