--- a/catalog/view/theme/d_visualize/template/component/d_address_field/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_address_field/default.twig
@@ -1,4 +1,4 @@
-<!-- > d_address_field -->
+<!-- > d_address_field_default -->
 <div class="form-group">
     <label class="{% if form %}col-sm-2{% endif %} field-label label-right-md" for="input-company"><span>{{ entry_company }}</span></label>
     <div class="{% if form %}col-sm-10{% endif %}">
@@ -78,4 +78,4 @@
         {% endif %}
     </div>
 </div>
-<!-- /> d_address_field -->
+<!-- /> d_address_field_default -->
