--- a/catalog/view/theme/d_visualize/template/component/d_button_submit/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_button_submit/default.twig
@@ -1,4 +1,4 @@
-<!-- > d_button_submit -->
+<!-- > d_button_submit_default -->
 <div class="buttons clearfix">
   <div class="pull-left fl-no-sm">
     {% if button_back %}
@@ -18,4 +18,4 @@
     {% endif %}
   </div>
 </div>
-<!-- /> d_button_submit -->
+<!-- /> d_button_submit_default -->
