--- a/catalog/view/theme/d_visualize/template/component/d_name_field/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_name_field/default.twig
@@ -1,4 +1,4 @@
-<!-- > d_name_field -->
+<!-- > d_name_field_default -->
 <div class="form-group required">
   <label class="{% if form %}col-sm-2{% endif %} field-label label-right-md" for="input-firstname"><span>{{entry_firstname}}</span></label>
   <div class="{% if form %}col-sm-10{% endif %}">
@@ -16,7 +16,5 @@
     <div class="text-danger">{{error_lastname}}</div>
     {% endif %}
   </div>
-
-
 </div>
 <!-- /> d_name_field -->
