--- a/catalog/view/theme/d_visualize/stylesheet/skin/jag/component/default/form/_dropdown_list.sass
+++ b/catalog/view/theme/d_visualize/stylesheet/skin/jag/component/default/form/_dropdown_list.sass
@@ -1,17 +1,19 @@
 .select-container
   position: relative
+  select
+    min-height: $buttonHeight
+    border: $borderMain
+    cursor: pointer
+    height: auto
+    padding: rem(5) rem(10) !important
+    &:focus,&:active
+      outline: none
   &:after
     content: '\f107'
-    position: absolute
+    +vcenter()
     font-size: 23px
     font-family: 'Font Awesome 5 Pro'
-    color: #7e8188
+    color: $p_grey_dropdwn
     font-weight: $fontLight
-    top: 10px
     right: 12px
     pointer-events: none
-  .field
-    padding: 0 16px 0 0
-    border: none
-    height: auto
-    cursor: pointer
