--- a/catalog/view/theme/d_visualize/template/account/forgotten.twig
+++ b/catalog/view/theme/d_visualize/template/account/forgotten.twig
@@ -1,18 +1,18 @@
 {#it's mean in layout template#}
 {% extends template %}
+
 {% block content %}
+
       <h1 class="heading-h1">{{heading_title}}</h1>
       <p>{{text_email}}</p>
       <form action="{{action}}" method="post" enctype="multipart/form-data" class="form-horizontal">
         <fieldset>
           <legend>{{text_your_email}}</legend>
           <div class="form-group required">
-            <label class="col-sm-2 field-label" for="input-email"><span>{{entry_email}}</span></label>
-            <div class="col-sm-10">
+            <label class="field-label" for="input-email"><span>{{entry_email}}</span></label>
               <input type="text" name="email" value="" placeholder="{{entry_email}}" id="input-email" class="field" />
-            </div>
           </div>
         </fieldset>
-        {% include 'd_visualize/template/partial/d_button_submit.twig' %}
+          {% include partial.d_button_submit.template with partial.d_button_submit %}
       </form>
 {% endblock %}
