--- a/catalog/view/theme/d_visualize/template/account/password.twig
+++ b/catalog/view/theme/d_visualize/template/account/password.twig
@@ -6,8 +6,8 @@
         <fieldset>
           <legend>{{text_password}}</legend>
           <div class="form-group required">
-            <label class="col-sm-2 field-label label-right-md" for="input-password"><span>{{entry_password}}</span></label>
-            <div class="col-sm-10">
+            <label class=" field-label label-right-md" for="input-password"><span>{{entry_password}}</span></label>
+            <div class="pwd-wrap">
               <input type="password" name="password" value="{{password}}" id="input-password" class="field" />
               {% if error_password %}
               <div class="text-danger">{{error_password}}</div>
@@ -15,8 +15,8 @@
             </div>
           </div>
           <div class="form-group required">
-            <label class="col-sm-2 field-label label-right-md" for="input-confirm"><span>{{entry_confirm}}</span></label>
-            <div class="col-sm-10">
+            <label class="field-label label-right-md" for="input-confirm"><span>{{entry_confirm}}</span></label>
+            <div class="pwd-c-wrap">
               <input type="password" name="confirm" value="{{confirm}}" id="input-confirm" class="field" />
               {% if error_confirm %}
               <div class="text-danger">{{error_confirm}}</div>
@@ -24,6 +24,6 @@
             </div>
           </div>
         </fieldset>
-        {% include 'd_visualize/template/partial/d_button_submit.twig' %}
+          {% include partial.d_button_submit.template with  partial.d_button_submit %}
       </form>
 {% endblock %}
