--- a/catalog/view/theme/d_visualize/template/account/return_info.twig
+++ b/catalog/view/theme/d_visualize/template/account/return_info.twig
@@ -85,5 +85,5 @@
         </tbody>
       </table>
       {% endif %}
-      {% include 'd_visualize/template/partial/d_button_continue.twig' %}
+    {% include partial.d_button_continue.template with  partial.d_button_continue %}
 {% endblock %}
