--- a/catalog/view/theme/d_visualize/template/account/tracking.twig
+++ b/catalog/view/theme/d_visualize/template/account/tracking.twig
@@ -1,49 +1,54 @@
 {#it's mean in layout template#}
 {% extends template %}
 {% block content %}
-    <h1 class="heading-h1">{{heading_title}}</h1>
-    <p>{{text_description}}</p>
+    <h1 class="heading-h1">{{ heading_title }}</h1>
+    <p>{{ text_description }}</p>
     <form class="form-horizontal">
         <div class="form-group">
-            <label class="col-sm-2 control-label" for="input-code">{{entry_code}}</label>
-            <div class="col-sm-10">
-                <textarea cols="40" rows="5" placeholder="{{entry_code}}" id="input-code" class="form-control">{{code}}</textarea>
+            <label class="  field-label label-right-md" for="input-code">{{ entry_code }}</label>
+            <div class="">
+                <textarea cols="40" rows="5" placeholder="{{ entry_code }}" id="input-code"
+                          class="field">{{ code }}</textarea>
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-2 control-label" for="input-generator"><span data-toggle="tooltip" title="{{help_generator}}">{{entry_generator}}</span></label>
-            <div class="col-sm-10">
-                <input type="text" name="product" value="" placeholder="{{entry_generator}}" id="input-generator" class="form-control" />
+            <label class="  field-label label-right-md" for="input-generator"><span data-toggle="tooltip"
+                                                                              title="{{ help_generator }}">{{ entry_generator }}</span></label>
+            <div class="">
+                <input type="text" name="product" value="" placeholder="{{ entry_generator }}" id="input-generator"
+                       class="field"/>
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-2 control-label" for="input-link">{{entry_link}}</label>
-            <div class="col-sm-10">
-                <textarea name="link" cols="40" rows="5" placeholder="{{entry_link}}" id="input-link" class="form-control"></textarea>
+            <label class="  field-label label-right-md" for="input-link">{{ entry_link }}</label>
+            <div class="">
+                <textarea name="link" cols="40" rows="5" placeholder="{{ entry_link }}" id="input-link"
+                          class="field"></textarea>
             </div>
         </div>
     </form>
-    {% include 'd_visualize/template/partial/d_button.twig' %}
+
+    {% include partial.d_button_continue.template with partial.d_button_continue %}
     <script type="text/javascript"><!--
-        $('input[name=\'product\']').autocomplete({
-            'source': function(request, response) {
-                $.ajax({
-                    url: 'index.php?route=account/tracking/autocomplete&filter_name=' +  encodeURIComponent(request) + '&tracking=' + encodeURIComponent($('#input-code').val()),
-                    dataType: 'json',
-                    success: function(json) {
-                        response($.map(json, function(item) {
-                            return {
-                                label: item['name'],
-                                value: item['link']
-                            }
-                        }));
-                    }
-                });
-            },
-            'select': function(item) {
-                $('input[name=\'product\']').val(item['label']);
-                $('textarea[name=\'link\']').val(item['value']);
-            }
-        });
-        //--></script>
+		$('input[name=\'product\']').autocomplete({
+			'source': function (request, response) {
+				$.ajax({
+					url: 'index.php?route=account/tracking/autocomplete&filter_name=' + encodeURIComponent(request) + '&tracking=' + encodeURIComponent($('#input-code').val()),
+					dataType: 'json',
+					success: function (json) {
+						response($.map(json, function (item) {
+							return {
+								label: item['name'],
+								value: item['link']
+							};
+						}));
+					}
+				});
+			},
+			'select': function (item) {
+				$('input[name=\'product\']').val(item['label']);
+				$('textarea[name=\'link\']').val(item['value']);
+			}
+		});
+		//--></script>
 {% endblock %}
