--- a/catalog/view/theme/d_visualize/template/layout/default.twig
+++ b/catalog/view/theme/d_visualize/template/layout/default.twig
@@ -1,15 +1,11 @@
 {{ header }}
+    {% block before_wrapper %}{% endblock %}
     {% block main_wrapper %}
-        <div class="main-wrapper " data-slideout-ignore>
-            {% include partial.breadcrumb.template with partial.breadcrumb %}
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12">
-                        {% include component.notification.template %}
-                    </div>
-                </div>
-            </div>
-            {% block before_content %}{% endblock %}
+        <div class="main-wrapper" data-slideout-ignore>
+            {% block before_content %}
+                {% include partial.breadcrumb.template with partial.breadcrumb %}
+                {% include partial.d_notification.template with partial.d_notification %}
+            {% endblock %}
             <div class="container">
                 <div class="row">{{ column_left }}
                     {% if column_left and column_right %}
