rewrite header // todo change butons and forms

--- a/catalog/view/theme/d_visualize/stylesheet/skin/jag/component/default/_button.sass
+++ b/catalog/view/theme/d_visualize/stylesheet/skin/jag/component/default/_button.sass
@@ -1,7 +1,9 @@
-.vd button.btn, button ,.btn
+.vd button.btn, button ,.btn:not(label)
   color: inherit
   border: none
   padding: rem(10)
+  display: flex
+  align-items: center
   +border-radius(0)
   height: $buttonHeight
   background: transparent
