--- a/catalog/view/theme/d_visualize/stylesheet/skin/jag/component/default/form/_forms.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/skin/jag/component/default/form/_forms.scss
@@ -31,7 +31,7 @@
       color: $p_red;
     }
   }
-  label, .field {
+  label.label-controll, .field {
     //for checkout view
     width: 100%;
   }
