blog support component changing

--- a/catalog/view/theme/d_visualize/template/extension/d_blog_module/post_thumb.twig
+++ b/catalog/view/theme/d_visualize/template/extension/d_blog_module/post_thumb.twig
@@ -1,1 +1,1 @@
-{% include component.extension.d_blog_module.post_thumb.template with component.extension.d_blog_module.post_thumb %}
+{% include extension.d_blog_module.component.d_post_thumb.template with extension.d_blog_module.component.d_post_thumb %}
