--- a/catalog/view/theme/d_visualize/template/error/not_found.twig
+++ b/catalog/view/theme/d_visualize/template/error/not_found.twig
@@ -4,5 +4,5 @@
 {% block content %}
     <h1 class="heading-h1">{{ heading_title }}</h1>
     <p>{{ text_error }}</p>
-    {% include partial.d_button.template %}
+    {% include partial.d_button_continue.template with  partial.d_button_continue %}
 {% endblock %}
